objects/Tv__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LED</fullName>
                </value>
                <value>
                    <fullName>OLED</fullName>
                </value>
                <value>
                    <fullName>QlED</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>LCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>32 inches</fullName>
                </value>
                <value>
                    <fullName>43 inches</fullName>
                </value>
                <value>
                    <fullName>50 inches</fullName>
                </value>
                <value>
                    <fullName>55 inches</fullName>
                </value>
                <value>
                    <fullName>65 inches</fullName>
                </value>
                <value>
                    <fullName>75 inches</fullName>
                </value>
                <value>
                    <fullName>85 inches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tv</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tvs</pluralLabel>
    <recordTypes>
        <fullName>Basic_TV</fullName>
        <active>true</active>
        <label>Basic TV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Smart_TV</fullName>
        <active>true</active>
        <label>Smart TV</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TV_Price_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Price__c  &lt;= 0</errorConditionFormula>
        <errorMessage>The Price of the TV cannot be less than or equal to 0</errorMessage>
    </validationRules>
</CustomObject>